# http_toolkit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/actions/python-build/: action.yml
.github/workflows/: build-and-push.yml  test.yml
docs/: TRANSPORT.md
httptoolkit/: __init__.py  _version.py  encoder.py  errors.py  header.py  http_method.py  request.py  retry.py  sent_request.py  sent_request_log_record.py
httptoolkit/httpx_service/: __init__.py  _async.py  _sync.py
httptoolkit/response/: __init__.py  _base.py  _regular.py
httptoolkit/response/_stream/: __init__.py  _async.py  _sync.py
httptoolkit/service/: __init__.py  _async.py  _sync.py
httptoolkit/transport/: __init__.py  _async_base.py  _sync_base.py
httptoolkit/transport/_httpx/: _async.py  _base.py  _sync.py
httptoolkit/transport/_httpx/_session/: _async.py  _sync.py
tests/httptoolkit/: conftest.py  test_error.py  test_error_pickle.py  test_header.py  test_request.py  test_retry.py  test_sent_request.py  test_sent_request_log_record.py
tests/httptoolkit/fixtures/: test.csv
tests/httptoolkit/response/: test_async_stream_error_response.py  test_response.py  test_stream_error_response.py
tests/httptoolkit/service/: test_async_service.py  test_service.py  test_service_error.py  test_service_error_typecast.py
tests/httptoolkit/transport/: test_base_transport.py
tests/httptoolkit/transport/httpx_transport/: test_async_transport.py  test_transport.py
tests/httptoolkit/transport/httpx_transport/session/: test_async_session.py  test_async_stream_response.py  test_session.py  test_stream_response.py
