[build-system]
requires = ["setuptools~=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "http_toolkit"
authors = [{name="Kontur", email = "python@skbkontur.ru"}]
description = "Library for creating HTTP clients to various services with flexible transport customization"
readme = "README.md"
requires-python = ">=3.9, <3.14"
dependencies = ["httpx~=0.24.1"]
dynamic = ["version"] # The version is imported from the module attribute specified in section [tool.setuptools.dynamic]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: tox",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
instruments = ["httpx~=0.24.1"]
test = ["pytest==7.0.0", "pytest-cov==3.0.0", "testfixtures==6.18.3", "pytest-asyncio==0.18.3", "pytest-httpx==0.22.0"]

[project.urls]
homepage = "https://github.com/skbkontur/http_toolkit"

[tool.pytest.ini_options]
addopts = "-ra -q"

[tool.flake8]
max-line-length = 119
exclude = ".svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg,.venv,env,venv,build"
extend-ignore = ["E203"]
tee = true

[tool.black]
line-length = 119
target-version = ["py39"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
install_types = true
non_interactive = true
exclude = ["env", "venv", "build"]

[tool.setuptools.packages.find]
include = ["httptoolkit"]

[tool.setuptools.dynamic]
version = {attr = "httptoolkit._version.__version__"}
